# SCAT

./: .gitignore  README.md  SCAT.spec  WORKFLOW.md  build.py  pyproject.toml
docs/: ROADMAP.md
models/: model_rf.pkl
scat/: __init__.py  analyzer.py  artifacts.py  classifier.py  cli.py  clustering.py  combine.py  confidence.py  config.py  detector.py  features.py  findings.py  grouping_util.py  labeling_gui.py  main_gui.py  manifest.py  metrics.py  parallel.py  pathutils.py  pipeline.py  progress.py  report.py  results_index.py  segmentation.py  spatial.py  statistics.py  trainer.py  ui_common.py  ui_motion.py  ui_styles.py  visualization.py
scat/agent/: backend.py  chat_widget.py  claude_subscription.py  prompts.py  provenance.py  registry.py  runner.py
scat/gui/: __init__.py  widgets.py  (+2 more)
scripts/: install_desktop_shortcut.ps1  install_desktop_shortcut.sh  launcher.py
tests/: conftest.py  test_agent_results_bridge.py  test_agent_runner.py  test_backend.py  test_chat_widget.py  test_cli.py  test_clustering.py  test_combine.py  test_confidence.py  test_config.py  test_config_analysis.py  test_core_imports_without_agent.py  test_findings.py  test_group_comparison_fixes.py  test_group_metadata.py  test_grouping_guard.py  test_gui_slimdown.py  test_infer_groups.py  test_labeling_gui.py  test_manifest.py  test_metric_hue_fix.py  test_metrics.py  test_parallel.py  test_pathutils.py  test_pipeline.py  test_pipeline_enrich.py  test_pipeline_parity.py  test_pipeline_primary_metric.py  test_progress.py  test_provenance.py  test_providers_base.py  test_registry.py  test_report.py  test_report_findings_note.py  test_report_lede.py  test_report_per_group.py  test_rerender.py  test_results_confidence.py  test_results_dict_analysis.py  test_results_index.py  (+14 more)
(+37 files in other folders)
