[project]
name = "scat"
version = "2.1.0"
description = "SCAT - Spot Classification and Analysis Tool for Drosophila excreta"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jin"}
]
keywords = ["drosophila", "excreta", "analysis", "ROD", "machine-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.0.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.7.0",
    "PySide6>=6.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
deep = [
    "torch>=1.12.0",
    "torchvision>=0.13.0",
]
pdf = [
    "weasyprint>=52.0",
]
agent = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
scat = "scat.cli:main"

[project.urls]
Homepage = "https://github.com/CrazyWaterdeer/SCAT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
